--- a/StockControl/Views/Operations/Edit.cshtml
+++ b/StockControl/Views/Operations/Edit.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="Corretora" class="form-control" />
                 <span asp-validation-for="Corretora" class="text-danger"></span>
             </div>
+            <div>
+                <label asp-for="CompanyName" class="control-label"></label>
+                <input asp-for="CompanyName" class="form-control" />
+                <span asp-validation-for="CompanyName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="TypeOperation" class="control-label"></label>
                 <select asp-for="TypeOperation" class="form-control"></select>
