--- a/StockControl/Views/Operations/Details.cshtml
+++ b/StockControl/Views/Operations/Details.cshtml
@@ -22,6 +22,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Corretora)
         </dd>
+        <dt class="col-sm-10">
+            @Html.DisplayFor(model => model.CompanyName)
+        </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CompanyName)
         </dd>
