fix issues and enhance the page

--- a/StockControl/Views/Operations/Delete.cshtml
+++ b/StockControl/Views/Operations/Delete.cshtml
@@ -10,54 +10,24 @@
 <div>
     <h4>Operation</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DateTrade)
+    <dl lass="dl-horizontal">
+        <dt>
+            @Html.DisplayFor(model => model.Stock)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DateTrade)
+        <dd>
+            @Html.DisplayFor(model => model.Stock)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Corretora)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Corretora)
-        </dd>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CompanyName)
-        </dd>
-        <dt class="col-sm-10">
-            @Html.DisplayFor(model => model.CompanyName)
-        </dt>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TypeOperation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TypeOperation)
-        </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Amount)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ValorUnit)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ValorUnit)
-        </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.ValorTotalTraded)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.ValorTotalTraded)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StatusOperation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StatusOperation)
         </dd>
     </dl>
     
