--- a/StockControl/Views/Operations/Details.cshtml
+++ b/StockControl/Views/Operations/Details.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
     <h4>Operation</h4>
     <hr />
-    <dl class="row">
+    <dl class="dl-horizontal">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DateTrade)
         </dt>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
     <a asp-action="Index">Back to List</a>
 </div>
