--- a/StockControl/Views/Operations/Edit.cshtml
+++ b/StockControl/Views/Operations/Edit.cshtml
@@ -28,9 +28,16 @@
                 <input asp-for="CompanyName" class="form-control" />
                 <span asp-validation-for="CompanyName" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Stock" class="control-label"></label>
+                <input asp-for="Stock" class="form-control" />
+                <span asp-validation-for="Stock" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="TypeOperation" class="control-label"></label>
-                <select asp-for="TypeOperation" class="form-control"></select>
+                <input asp-for="TypeOperation" class="form-control" />
                 <span asp-validation-for="TypeOperation" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -50,7 +57,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="StatusOperation" class="control-label"></label>
-                <select asp-for="StatusOperation" class="form-control"></select>
+                <input asp-for="StatusOperation" class="form-control"></input>
                 <span asp-validation-for="StatusOperation" class="text-danger"></span>
             </div>
             <div class="form-group">
