--- a/StockControl/Views/Shared/_Layout.cshtml
+++ b/StockControl/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Operations" asp-action="Index">Operations</a>
                         </li>
                         <li class="nav-item">
